# EcoVerify-Prime-autonomic-governance-engine

./: .env.example  .gitignore  Makefile  README.md
backend/: .env.example  pyproject.toml
backend/src/ecoverify/: __init__.py  config.py  main.py
backend/src/ecoverify/a2a/: __init__.py  discovery.py  models.py
backend/src/ecoverify/agents/: __init__.py  edges.py  graph.py  llm.py  state.py
backend/src/ecoverify/agents/nodes/: __init__.py  architect.py  finalize.py  governor.py  jurist.py  vanguard.py
backend/src/ecoverify/api/: __init__.py  demo.py  routes.py  schemas.py
backend/src/ecoverify/edutech/: __init__.py  friction_detector.py  models.py  upskill_engine.py
backend/src/ecoverify/fintech/: __init__.py  compliance.py  models.py  risk_scoring.py
backend/src/ecoverify/health/: __init__.py  fhir_client.py  models.py
backend/src/ecoverify/mcp/: __init__.py  __main__.py  server.py
backend/src/ecoverify/mcp/data/: EU_AI_Act_v2.json
backend/src/ecoverify/mcp/tools/: bms.py  fhir.py  fintech.py  jira_ops.py  regulatory.py  web3_ops.py
backend/src/ecoverify/media/: __init__.py  intent_engine.py  models.py
backend/src/ecoverify/nhi/: __init__.py  keys.py  middleware.py  signing.py
backend/src/ecoverify/telemetry/: tracing.py
backend/src/ecoverify/web3/: __init__.py  models.py  settlement.py  wallet.py
backend/tests/: test_graph.py  test_mcp_tools.py  test_nhi.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  app.css  global.d.ts
frontend/src/hooks/: useAgentStream.ts
(+19 files in other folders)
