[project]
name = "ecoverify-prime"
version = "0.1.0"
description = "Autonomic Sustainability Governance Ecosystem"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=1.0",
    "langgraph-checkpoint-sqlite>=3.0",
    "langchain-openai>=0.3",
    "langchain-core>=0.3",
    "fastmcp>=2.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sse-starlette>=2.2",
    "cryptography>=43.0",
    "opentelemetry-api>=1.28",
    "opentelemetry-sdk>=1.28",
    "opentelemetry-exporter-otlp>=1.28",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "python-dotenv>=1.0",
    "httpx>=0.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
    "mypy>=1.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ecoverify"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
